# sphinx-rustdoc-postprocess

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pixi.toml  publish.el  pyproject.toml  readme_src.org
.github/workflows/: ci.yml  doc_commenter.yml  docs.yml  pages.yml  pre_commit.yml
docs/orgmode/: index.org  usage.org
docs/source/: conf.py  index.rst  usage.rst
src/sphinx_rustdoc_postprocess/: __init__.py
tests/: conftest.py  test_convert_fences.py  test_convert_headings.py  test_convert_links.py  test_convert_tables.py  test_postprocess.py  test_setup.py
