[project]
name = "sphinx-rustdoc-postprocess"
dynamic = ["version"]
description = "Post-process sphinxcontrib-rust RST output, converting leftover markdown to proper RST via pandoc."
readme = "README.md"
authors = [
    { name = "Rohit Goswami", email = "rgoswami@ieee.org" }
]
requires-python = ">=3.10"
license = "MIT"
dependencies = ["sphinx>=7"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/sphinx_rustdoc_postprocess/_version.py"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov", "pytest-randomly", "ruff>=0.9"]
docs = ["sphinx>=8", "sphinx-autoapi>=3", "shibuya"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/sphinx_rustdoc_postprocess/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.towncrier]
package = "sphinx_rustdoc_postprocess"
filename = "CHANGELOG.md"
directory = "news"
